# cppbackend

./: README.md
.github/workflows/: main.yml
sprint1/problems/async_server/solution/: README.md
sprint1/problems/async_server/solution/src/: main.cpp
sprint1/problems/cafeteria/solution/: README.md
sprint1/problems/cafeteria/solution/src/: cafeteria.h  hotdog.h  ingredients.h  main.cpp  result.h
sprint1/problems/final_task/solution/: README.md
sprint1/problems/final_task/solution/src/: http_server.cpp  json_loader.cpp  json_loader.h  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/radio/solution/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
sprint1/problems/restaurant_single_threaded/solution/: README.md
sprint1/problems/seabattle/solution/: README.md
sprint1/problems/sync_server/solution/: CMakeLists.txt  README.md
sprint2/problems/command_line/solution/: CMakeLists.txt  README.md  README_ORIG.md
sprint2/problems/final_task/solution/: CMakeLists.txt  Dockerfile  README.md
sprint2/problems/final_task/solution/src/: model.h  request_handler.cpp
sprint2/problems/game_state/solution/: CMakeLists.txt  README.md
sprint2/problems/join_game/solution/: CMakeLists.txt  README.md
sprint2/problems/logger/solution/: CMakeLists.txt  README.md  my_logger.h
sprint2/problems/move_players/solution/: Dockerfile  README.md
sprint2/problems/server_logging/solution/: CMakeLists.txt  README.md
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile  README.md  conanfile.txt
sprint2/problems/time_control/solution/: README.md
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/final_task/solution/: CMakeLists.txt  README.md
sprint3/problems/find_return/solution/: README.md
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: Dockerfile
sprint3/problems/gather/solution/: CMakeLists.txt  Dockerfile  README.md  conanfile.txt
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile  README.md  conanfile.txt
sprint3/problems/htmldecode/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/instrumentation/solution/: binarytree.cpp  binarytree.h  config.cpp  config.h  dotgen.cpp  dotgen.h  event2dot  graph.cpp  graph.h  inputs  main.cpp  readfile.cpp  readfile.h
sprint3/problems/load/solution/: load.yaml
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: game_session.cpp  game_session.h  http_server.cpp  json_loader.cpp  json_loader.h  logging_handler.cpp  model.h  players.cpp
sprint3/problems/static_lib/solution/static/js/: game.js
sprint3/problems/static_lib/solution/tests/: model-tests.cpp
sprint3/problems/stress/: load.yaml
sprint3/problems/stress/solution/: ammo.txt
sprint3/problems/tv/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/urldecode/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/urlencode/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/bookypedia-1/solution/: README.md  conanfile.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  README.md
sprint4/problems/db_of_books/solution/: CMakeLists.txt  README.md
sprint4/problems/db_of_books/solution/src/: json_parse.h  main.cpp  pg_database.h
sprint4/problems/final_task/solution/: README.md
sprint4/problems/leave_game/solution/: Dockerfile  README.md  conanfile.txt
sprint4/problems/state_serialization/solution/: CMakeLists.txt
(+239 files in other folders)
